# myenergi-display

./: .gitignore  LICENSE.txt  README.md  build.sh  pyproject.toml
doc/: .gitignore  configuring_the_server.md  ev_charging.md  hot_water_tank.md  rpi_zero_installation.md  starting_the_server.md
installers/: myenergi_display-0.174-py3-none-any.whl  myenergi_display-0.175-py3-none-any.whl  myenergi_display-0.177-py3-none-any.whl  myenergi_display-0.179-py3-none-any.whl  myenergi_display-0.180-py3-none-any.whl  myenergi_display-0.182-py3-none-any.whl  myenergi_display-0.184-py3-none-any.whl  myenergi_display-0.185-py3-none-any.whl  myenergi_display-0.186-py3-none-any.whl  myenergi_display-0.187-py3-none-any.whl  myenergi_display-0.188-py3-none-any.whl  myenergi_display-0.189-py3-none-any.whl  myenergi_display-0.190-py3-none-any.whl  myenergi_display-0.191-py3-none-any.whl  myenergi_display-0.193-py3-none-any.whl  myenergi_display-0.194-py3-none-any.whl  myenergi_display-0.195-py3-none-any.whl  myenergi_display-0.198-py3-none-any.whl
mobile_phone_stand/: README.md  base.FCStd  top.FCStd
myenergi_display/: myenergi_display.py
